altera os itens do menu da barra fixada ao topo para melhorar alinhamento e visibilidade. Também adiciona links nos demais itens.

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ nav ul {
 
 nav ul li {
   display: inline;
+  margin: 0 20px;
 }
 
 img {
